--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
 
   server:
     build: ./server
+    container_name: workforce-server-1
     ports:
       - "8800:8800"
     working_dir: /src
@@ -29,11 +30,14 @@ services:
       - mysql
 
   mysql:
-    image: mysql:8
+    image: mysql:8.0.36
     restart: always
+    container_name: workforce-mysql-1
     environment:
-      MYSQL_ROOT_PASSWORD: example
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
+      DB_HOST: workforce-mysql-1
+      command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
     volumes:
