--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,13 +30,13 @@ services:
       - mysql
 
   mysql:
-    image: mysql:8.0.36
+    image: mysql:8
     restart: always
     container_name: workforce-mysql-1
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
-      DB_HOST: workforce-mysql-1
+      DB_HOST: mysql
       command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
