--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   client:
     build: ./client
@@ -6,8 +8,8 @@ services:
     working_dir: /app
     command: ["npm", "run", "dev"]
     volumes:
-      - ./client:/app              
-      - /app/node_modules    
+      - ./client:/src
+      - /src/node_modules
     depends_on:
       - server
 
@@ -17,10 +19,10 @@ services:
     ports:
       - "8800:8800"
     working_dir: /src
-    command: ["npm", "run", "dev"] 
+    command: ["npm", "run", "start"]
     volumes:
-      - ./server:/src                
-      - /src/node_modules           
+      - ./server:/src
+      - /node_modules
     env_file:
       - ./server/.env
     depends_on:
@@ -43,3 +45,4 @@ services:
 volumes:
   workforce_mysql-data:
     external: true
+
