--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   client:
     build: ./client
@@ -8,8 +6,8 @@ services:
     working_dir: /app
     command: ["npm", "run", "dev"]
     volumes:
-      - ./client:/src
-      - /src/node_modules
+      - ./client:/app              # ✅ Match working_dir
+      - /app/node_modules          # ✅ Match working_dir
     depends_on:
       - server
 
@@ -19,10 +17,10 @@ services:
     ports:
       - "8800:8800"
     working_dir: /src
-    command: ["npm", "run", "start"]
+    command: ["npm", "run", "dev"]   # ✅ Changed to dev for nodemon
     volumes:
-      - ./server:/src
-      - /node_modules
+      - ./server:/src                # ✅ Correct
+      - /src/node_modules            # ✅ Fixed path
     env_file:
       - ./server/.env
     depends_on:
@@ -45,4 +43,3 @@ services:
 volumes:
   workforce_mysql-data:
     external: true
-
